重构vertx-rest